--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,9 +1,9 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=TO_BE_ADDED"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K52C9QRRNY"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'TO_BE_ADDED');
+    gtag('config', 'G-K52C9QRRNY');
 </script>
